fix: adapt backported security fixes for jline-3.x Java 8 compatibility
- Replace Path.of() with Paths.get() (Java 11+ API)
- Replace ByteArrayOutputStream.toString(Charset) with toString(String)
- Replace Size.of() with new Size()
- Replace less.size = with less.size.copy()
- Replace appendCodePoint() with append(new String(Character.toChars()))
- Remove defaultPrompt-related tests (feature not present in 3.x)
- Apply spotless formatting